--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -1,5 +1,27 @@
 @use './base' as *;
 
+// Bg Images
+
+.bg__image{
+  background-repeat: no-repeat;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  left: 0;
+  top: 0;
+  z-index: -100;
+}
+
+.img__top{
+  background-image: url(../images/bg-blob-top.png);
+  background-position: top right;
+}
+
+.img__bot{
+  background-image: url(../images/bg-blob-bot.png);
+  background-position: bottom left;
+}
+
 // Start
 
 .Start{
