--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -59,3 +59,15 @@
   margin-top: 3rem;
   justify-self: center;
 }
+
+// footer correct answers
+
+.footer {
+  width: 100%;
+  margin-top: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  font-size: 1.2rem;
+}
