--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -48,7 +48,7 @@ main {
 
 // fonts
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Karla:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Karla:wght@700&display=swap');
 
 p {
   font-family: inter;
